@@ -1,7 +1,7 @@
 <title>LilyPond, music notation for everyone</title>  
 
 
-<h1 align=center>LilyPond <font size=+2><em>...beautiful music notation for
+<h1 align=center>LilyPond <font size=+2><em>... music notation for
 everyone</em></font></h1>
 
 <p align=center>
@@ -128,7 +128,7 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 </tr>
 
 <tr>
-<td>Stable</td>
+<td>Old</td>
 <td>1.6.12</td>
 <td>
 <a href=http://lilypond.org/doc/v1.6/Documentation/out-www/>Documentation</a>,
